@@ -349,15 +349,7 @@ ZIterator* SSDB::zrscan(const Bytes &name, const Bytes &key,
 	*/
 }
 
-int SSDB::zlist(const Bytes &name_s, const Bytes &name_e, uint64_t limit,
-		std::vector<std::string> *list) const{
-	std::string start;
-	std::string end;
-	start = encode_zsize_key(name_s);
-	if(!name_e.empty()){
-		end = encode_zsize_key(name_e);
-	}
-	Iterator *it = this->iterator(start, end, limit);
+static void get_znames(Iterator *it, std::vector<std::string> *list){
 	while(it->next()){
 		Bytes ks = it->key();
 		//dump(ks.data(), ks.size());
@@ -370,6 +362,39 @@ int SSDB::zlist(const Bytes &name_s, const Bytes &name_e, uint64_t limit,
 		}
 		list->push_back(n);
 	}
+}
+
+int SSDB::zlist(const Bytes &name_s, const Bytes &name_e, uint64_t limit,
+		std::vector<std::string> *list) const{
+	std::string start;
+	std::string end;
+	
+	start = encode_zsize_key(name_s);
+	if(!name_e.empty()){
+		end = encode_zsize_key(name_e);
+	}
+	
+	Iterator *it = this->iterator(start, end, limit);
+	get_znames(it, list);
+	delete it;
+	return 0;
+}
+
+int SSDB::zrlist(const Bytes &name_s, const Bytes &name_e, uint64_t limit,
+		std::vector<std::string> *list) const{
+	std::string start;
+	std::string end;
+
+	start = encode_zsize_key(name_s);
+	if(name_s.empty()){
+		start.append(1, 255);
+	}
+	if(!name_e.empty()){
+		end = encode_zsize_key(name_e);
+	}
+
+	Iterator *it = this->rev_iterator(start, end, limit);
+	get_znames(it, list);
 	delete it;
 	return 0;
 }
